force-app/main/default/objects/COVID_Inv_Line_Items__c/COVID_Inv_Line_Items__c.object-meta.xml
<CustomObject>
    <label>COVID Inv Line Item</label>
    <nameField>
        <displayFormat>COVIDINVLI-{0000000}</displayFormat>
        <label>COVID Inv Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COVID Inv Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>