force-app/main/default/objects/COVID_Inv_Line_Items__c/fields/AUD_NZD_Amount__c.field-meta.xml
<CustomField>
    <fullName>AUD_NZD_Amount__c</fullName>
    <formula>( COVID_Invoice__r.Actual_Amount_Paid_AUD_NZD__c / COVID_Invoice__r.Invoice_Amount__c )* Calculated_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AUD/NZD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>