force-app/main/default/objects/COVID_Inv_Line_Items__c/fields/COVID_Invoice__c.field-meta.xml
<CustomField>
    <fullName>COVID_Invoice__c</fullName>
    <label>COVID Invoice</label>
    <referenceTo>COVID_Invoice__c</referenceTo>
    <relationshipLabel>COVID Inv Line Item</relationshipLabel>
    <relationshipName>COVID_Inv_Line_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>