force-app/main/default/objects/COVID_Inv_Line_Items__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>COVID Inv Line Item</relationshipLabel>
    <relationshipName>COVID_Inv_Line_Item</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>